Continued converting code to Java 11 and now using HttpClient