@@ -4,17 +4,16 @@ import com.google.gson.Gson;
 import com.google.gson.annotations.SerializedName;
 import me.joshmcfarlin.cryptocompareapi.Utils.CallTypes;
 import me.joshmcfarlin.cryptocompareapi.Utils.Connection;
-import me.joshmcfarlin.cryptocompareapi.Utils.OutOfCallsException;
+import me.joshmcfarlin.cryptocompareapi.Exceptions.OutOfCallsException;
 
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.Map;
 
 /**
  * Contains methods for requesting information about coins listed by CryptoCompare
- * @author joshuamcfarlin
- * @version 1
+ * @author Josh McFarlin
  */
 public class Coins {
     /**
@@ -23,8 +22,8 @@ public class Coins {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static CoinList getCoinList() throws IOException, OutOfCallsException {
-        Reader r = Connection.getJSON(new URL("https://min-api.cryptocompare.com/data/all/coinlist"), CallTypes.PRICE);
+    public static CoinList getCoinList() throws IOException, OutOfCallsException, InterruptedException {
+        Reader r = Connection.getJSON(URI.create("https://min-api.cryptocompare.com/data/all/coinlist"), CallTypes.PRICE);
         return new Gson().fromJson(r, CoinList.class);
     }
 
@@ -36,15 +35,15 @@ public class Coins {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static PairSnapshot getPairSnapshot(String fromSym, String toSym) throws IOException, OutOfCallsException, NumberFormatException {
+    public static PairSnapshot getPairSnapshot(String fromSym, String toSym) throws IOException, OutOfCallsException, NumberFormatException, InterruptedException {
         String formattedUrl = String.format("https://www.cryptocompare.com/api/data/coinsnapshot/?fsym=%s&tsym=%s",
                 fromSym.toUpperCase(), toSym.toUpperCase());
-        Reader r = Connection.getJSON(new URL(formattedUrl), CallTypes.PRICE);
+        Reader r = Connection.getJSON(URI.create(formattedUrl), CallTypes.PRICE);
         return new Gson().fromJson(r, PairSnapshot.class);
     }
 
-    public static CoinSnapshot getCoinSnapshot(int id) throws IOException, OutOfCallsException, NumberFormatException {
-        Reader r = Connection.getJSON(new URL(
+    public static CoinSnapshot getCoinSnapshot(int id) throws IOException, OutOfCallsException, NumberFormatException, InterruptedException {
+        Reader r = Connection.getJSON(URI.create(
                 "https://www.cryptocompare.com/api/data/coinsnapshotfullbyid/?id=" + id), CallTypes.PRICE);
         return new Gson().fromJson(r, CoinSnapshot.class);
     }
