@@ -4,17 +4,16 @@ import com.google.gson.*;
 import com.google.gson.annotations.SerializedName;
 import me.joshmcfarlin.cryptocompareapi.Utils.CallTypes;
 import me.joshmcfarlin.cryptocompareapi.Utils.Connection;
-import me.joshmcfarlin.cryptocompareapi.Utils.OutOfCallsException;
+import me.joshmcfarlin.cryptocompareapi.Exceptions.OutOfCallsException;
 
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.Map;
 
 /**
  * Contains methods for requesting information about historic cryptocurrency prices
- * @author joshuamcfarlin
- * @version 1
+ * @author Josh McFarlin
  */
 public class Historic {
     /**
@@ -26,10 +25,10 @@ public class Historic {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static History getMinute(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException {
+    public static History getMinute(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException, InterruptedException {
         String formattedUrl = String.format("https://min-api.cryptocompare.com/data/histominute?fsym=%s&tsym=%s&limit=%d",
                 fromSym.toUpperCase(), toSym.toUpperCase(), limit);
-        Reader r = Connection.getJSON(new URL(formattedUrl), CallTypes.HISTO);
+        Reader r = Connection.getJSON(URI.create(formattedUrl), CallTypes.HISTO);
         return new Gson().fromJson(r, History.class);
     }
 
@@ -42,10 +41,10 @@ public class Historic {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static History getHour(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException {
+    public static History getHour(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException, InterruptedException {
         String formattedUrl = String.format("https://min-api.cryptocompare.com/data/histohour?fsym=%s&tsym=%s&limit=%d",
                 fromSym.toUpperCase(), toSym.toUpperCase(), limit);
-        Reader r = Connection.getJSON(new URL(formattedUrl), CallTypes.HISTO);
+        Reader r = Connection.getJSON(URI.create(formattedUrl), CallTypes.HISTO);
         return new Gson().fromJson(r, History.class);
     }
 
@@ -58,10 +57,10 @@ public class Historic {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static History getDay(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException {
+    public static History getDay(String fromSym, String toSym, int limit) throws IOException, OutOfCallsException, InterruptedException {
         String formattedUrl = String.format("https://min-api.cryptocompare.com/data/histoday?fsym=%s&tsym=%s&limit=%d",
                 fromSym.toUpperCase(), toSym.toUpperCase(), limit);
-        Reader r = Connection.getJSON(new URL(formattedUrl), CallTypes.HISTO);
+        Reader r = Connection.getJSON(URI.create(formattedUrl), CallTypes.HISTO);
         return new Gson().fromJson(r, History.class);
     }
 
@@ -74,11 +73,11 @@ public class Historic {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static Map getPriceAtTime(int timestamp, String fromSym, String... toSym) throws IOException, OutOfCallsException {
+    public static Map getPriceAtTime(int timestamp, String fromSym, String... toSym) throws IOException, OutOfCallsException, InterruptedException {
         String formattedUrl = String.format("https://min-api.cryptocompare.com/data/pricehistorical?fsym=%s&tsyms=%s&ts=%d",
                 fromSym.toUpperCase(), String.join(",", toSym).toUpperCase(), timestamp);
 
-        Reader r = Connection.getJSON(new URL(formattedUrl), CallTypes.HISTO);
+        Reader r = Connection.getJSON(URI.create(formattedUrl), CallTypes.HISTO);
         JsonObject jobject = new Gson().fromJson(r, JsonObject.class);
         return new Gson().fromJson(jobject.get(fromSym), Map.class);
     }
