@@ -4,16 +4,15 @@ import com.google.gson.Gson;
 import com.google.gson.annotations.SerializedName;
 import me.joshmcfarlin.cryptocompareapi.Utils.CallTypes;
 import me.joshmcfarlin.cryptocompareapi.Utils.Connection;
-import me.joshmcfarlin.cryptocompareapi.Utils.OutOfCallsException;
+import me.joshmcfarlin.cryptocompareapi.Exceptions.OutOfCallsException;
 
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
 import java.util.Map;
 
 /**
  * Contains methods for requesting information about cryptocurrency mining
- * @author joshuamcfarlin
- * @version 1
+ * @author Josh McFarlin
  */
 public class Mining {
     /**
@@ -22,8 +21,8 @@ public class Mining {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static Contracts getContracts() throws IOException, OutOfCallsException {
-        Reader r = Connection.getJSON(new URL("https://www.cryptocompare.com/api/data/miningcontracts/"), CallTypes.OTHER);
+    public static Contracts getContracts() throws IOException, OutOfCallsException, InterruptedException {
+        Reader r = Connection.getJSON(URI.create("https://www.cryptocompare.com/api/data/miningcontracts/"), CallTypes.OTHER);
         return new Gson().fromJson(r, Contracts.class);
     }
 
@@ -33,8 +32,8 @@ public class Mining {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static Equipment getEquipment() throws IOException, OutOfCallsException {
-        Reader r = Connection.getJSON(new URL("https://www.cryptocompare.com/api/data/miningequipment/"), CallTypes.OTHER);
+    public static Equipment getEquipment() throws IOException, OutOfCallsException, InterruptedException {
+        Reader r = Connection.getJSON(URI.create("https://www.cryptocompare.com/api/data/miningequipment/"), CallTypes.OTHER);
         return new Gson().fromJson(r, Equipment.class);
     }
 
