@@ -4,16 +4,15 @@ import com.google.gson.Gson;
 import com.google.gson.annotations.SerializedName;
 import me.joshmcfarlin.cryptocompareapi.Utils.CallTypes;
 import me.joshmcfarlin.cryptocompareapi.Utils.Connection;
-import me.joshmcfarlin.cryptocompareapi.Utils.OutOfCallsException;
+import me.joshmcfarlin.cryptocompareapi.Exceptions.OutOfCallsException;
 
 import java.io.*;
-import java.net.URL;
+import java.net.URI;
 import java.util.List;
 
 /**
  * Contains methods for requesting information about social media accounts for cryptocurrencies and exchanges
- * @author joshuamcfarlin
- * @version 1
+ * @author Josh McFarlin
  */
 public class Social {
     /**
@@ -23,8 +22,8 @@ public class Social {
      * @throws IOException when a connection cannot be made
      * @throws OutOfCallsException when no more API calls are available
      */
-    public static SocialStats getStats(int id) throws IOException, OutOfCallsException {
-        Reader r = Connection.getJSON(new URL("https://www.cryptocompare.com/api/data/socialstats/?id=" + id), CallTypes.OTHER);
+    public static SocialStats getStats(int id) throws IOException, OutOfCallsException, InterruptedException {
+        Reader r = Connection.getJSON(URI.create("https://www.cryptocompare.com/api/data/socialstats/?id=" + id), CallTypes.OTHER);
         return new Gson().fromJson(r, SocialStats.class);
     }
 
